--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cece Duval</h1>
-    <img height="200" src="/images/resume-img.jpg" alt="headshot of cece duval">
+    <img height="200" src="./images/resume-img.jpg" alt="headshot of cece duval">
     <h2>Summary</h2>
     <p>I am a divine goddess with an appreciation for the abstract nature of art. I've been following a path others laid out for me and am transitioning into a life I want for myself.</p>
     <hr>
@@ -115,9 +115,9 @@
     </ul>
     <hr>
     <h2>Other</h2>
-    <a href="/hobbies.html">My Hobbies</a>
+    <a href="./hobbies.html">My Hobbies</a>
     <br>
-    <a href="/contact.html">Contact Me</a>
+    <a href="./contact.html">Contact Me</a>
     <footer>
         <p>© The Divine Celeste. All rights reserved.</p>
     </footer>
